--- a/KerberosRun/KerberosRun/KerberosRun.csproj
+++ b/KerberosRun/KerberosRun/KerberosRun.csproj
@@ -36,8 +36,8 @@
     <Reference Include="Costura, Version=4.0.0.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
       <HintPath>..\packages\Costura.Fody.4.0.0\lib\net40\Costura.dll</HintPath>
     </Reference>
-    <Reference Include="Kerberos.NET, Version=4.0.0.0, Culture=neutral, PublicKeyToken=10b231fbfc8c4b4d, processorArchitecture=MSIL">
-      <HintPath>..\packages\Kerberos.NET.4.0.0-g\lib\netstandard2.0\Kerberos.NET.dll</HintPath>
+    <Reference Include="Kerberos.NET, Version=4.5.0.0, Culture=neutral, PublicKeyToken=10b231fbfc8c4b4d, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kerberos.NET.4.5.16\lib\netstandard2.0\Kerberos.NET.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="Microsoft.Extensions.Logging.Abstractions">
