--- a/KerberosRun/KerberosRun/packages.config
+++ b/KerberosRun/KerberosRun/packages.config
@@ -3,7 +3,7 @@
   <package id="CommandLineParser" version="1.9.71" targetFramework="net472" />
   <package id="Costura.Fody" version="4.0.0" targetFramework="net472" />
   <package id="Fody" version="5.0.6" targetFramework="net472" developmentDependency="true" />
-  <package id="Kerberos.NET" version="4.0.0-g" targetFramework="net472" />
+  <package id="Kerberos.NET" version="4.5.16" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.2" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.IO.Pipelines" version="4.7.0" targetFramework="net472" />
