--- a/KerberosRun/KerberosRun/KerberosRun.csproj
+++ b/KerberosRun/KerberosRun/KerberosRun.csproj
@@ -36,8 +36,14 @@
     <Reference Include="System.Security" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KerberosRun.cs" />
+    <Compile Include="Logging.cs" />
+    <Compile Include="S4U2Proxy.cs" />
+    <Compile Include="S4U2Self.cs" />
+    <Compile Include="TGS.cs" />
+    <Compile Include="TGT.cs" />
     <Compile Include="BuildTicket.cs" />
-    <Compile Include="Commands.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Pac.cs" />
     <Compile Include="Utils\Interop.cs" />
@@ -46,10 +52,8 @@
     <Compile Include="Utils\LUID.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ask.cs" />
     <Compile Include="KrbConstants.cs" />
-    <Compile Include="PrintFunc.cs" />
-    <Compile Include="S4U.cs" />
+    <Compile Include="Display.cs" />
     <Compile Include="Kirbi.cs" />
     <Compile Include="Utils\Utils.cs" />
   </ItemGroup>
@@ -60,7 +64,7 @@
     <PackageReference Include="CommandLineParser">
       <Version>2.7.82</Version>
     </PackageReference>
-    <PackageReference Include="Costura.Fody">
+    <PackageReference Include="Costura.Fody" PrivateAssets="All">
       <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="Fody">
@@ -70,6 +74,9 @@
     </PackageReference>
     <PackageReference Include="Kerberos.NET">
       <Version>4.5.3</Version>
+    </PackageReference>
+    <PackageReference Include="NLog">
+      <Version>4.7.13</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
