Added DC support
1. Added --DC
2. Added --RC4
3. Added User in base64Ticket

--- a/KerberosRun/KerberosRun.csproj
+++ b/KerberosRun/KerberosRun.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Security" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KrbTcp.cs" />
     <Compile Include="Roast.cs" />
     <Compile Include="KerberosService.cs" />
     <Compile Include="KerberosRun.cs" />
