--- a/KerberosRun/KerberosRun.csproj
+++ b/KerberosRun/KerberosRun.csproj
@@ -84,6 +84,9 @@
     <PackageReference Include="NLog">
       <Version>4.7.13</Version>
     </PackageReference>
+    <PackageReference Include="System.Formats.Asn1">
+      <Version>6.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
